<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/hello_world"
        tools:context=".MainActivity" />
    
    <EditText 
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintWord" >    </EditText>
    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Reason for taking this course:"
        ></TextView> 
       <RadioGroup
           android:id="@+id/careerReason"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical">
          <RadioButton
                android:id="@+id/rbtnCareer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/career"
                 >                
            </RadioButton>
           <RadioButton
                android:id="@+id/rbtnHobby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/hobby" 
                >             
            </RadioButton>
       </RadioGroup>
       
       <Button 
          android:id="@+id/btnSubmit"
          android:gravity="right"
          android:layout_width="wrap_content"
          android:layout_gravity="right"
          android:layout_height="wrap_content"
          android:text="@string/submit"
          android:onClick="onButtonClick"/>
       <TextView
           android:id="@+id/courseView"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="15dp" />
       
</LinearLayout>
